Style tweaks on breadcrumbs

--- a/wp-content/themes/decimaltenths/src/scss/components/_breadcrumbs.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_breadcrumbs.scss
@@ -3,9 +3,9 @@
 // ==============================================
 
 .woocommerce-breadcrumb {
-    padding: $medium-spacing;
+    padding: $small-spacing;
     font-size: rem-calc(14);
-    background-color: (rgba(black, 60%));
+    // background-color: (rgba(black, 60%));
 
     @include breakpoint(large) {
         max-width: 50%;
