--- a/wp-content/themes/decimaltenths/src/scss/components/_service-highlight.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_service-highlight.scss
@@ -3,9 +3,8 @@
 // ==============================================
 
 service-highlight {
-    margin: $medium-spacing;
-    padding-top: rem-calc(50);
-    padding-bottom: rem-calc(50);
+    margin: $medium-spacing auto;
+	padding: rem-calc(50);
     max-width: $global-width;
 
 	// CSS Grid
