--- a/wp-content/themes/decimaltenths/src/scss/components/_category-panels.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_category-panels.scss
@@ -4,8 +4,7 @@
 
 category-panels {
     display: block;
-    padding-top: rem-calc(50);
-    padding-bottom: rem-calc(50);
+    padding: rem-calc(50);
 
     .row {
         justify-content: center;
