--- a/wp-content/themes/decimaltenths/src/scss/components/_scrolling-products.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_scrolling-products.scss
@@ -5,8 +5,7 @@
 scrolling-products {
     @extend %row;
     display: block;
-    padding-top: rem-calc(50);
-    padding-bottom: rem-calc(50);
+    padding: rem-calc(50);
 
     .h3 {
         margin-bottom: rem-calc(24);
