--- a/wp-content/themes/decimaltenths/src/scss/global/_typography.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_typography.scss
@@ -25,7 +25,7 @@ h6,
 	margin-top: 0;
 	// margin-bottom: var(--global--spacing-vertical);
 	font-weight: $bold;
-	font-family: $heading-font;
+	font-family: $brand-font;
 	line-height: 1.2;
 	letter-spacing: 0.07em;
 	color: inherit;
