Cart and checkout styling

--- a/wp-content/themes/decimaltenths/src/scss/components/_service-highlight.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_service-highlight.scss
@@ -107,6 +107,7 @@ service-highlight {
 		.btn {
 			background-color: var(--off-black);
 			border-color: transparent;
+			color: var(--brand-neon-green);
 
 			&:hover,
 			&:focus {
