--- a/wp-content/themes/decimaltenths/src/scss/global/_extends.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_extends.scss
@@ -190,7 +190,7 @@
 	border: 2px solid var(--brand-neon-green);
 	border-radius: 50px;
 	cursor: pointer;
-    color: var(--brand-neon-green);
+    color: var(--off-black);
 
 	@include breakpoint(small down) {
 		margin-bottom: $medium-spacing;
