--- a/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-styles.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-styles.scss
@@ -45,13 +45,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 $medium-spacing;
     height: rem-calc(50); // to match the select
     color: black;
     // background-color: rgba(black, 90%);
 
     @include breakpoint(large) {
         justify-content: flex-start;
+        margin-left: rem-calc(50);
     }
 }
 
@@ -59,6 +59,10 @@
     margin-bottom: rem-calc(50);
     padding: 0 $medium-spacing;
     width: 100%;
+
+    @include breakpoint(large) {
+        padding: 0 rem-calc(67);
+    }
 
     // @include breakpoint(medium) {}
 
