Youtube vide button now red

--- a/wp-content/themes/decimaltenths/src/scss/components/_video-feed.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_video-feed.scss
@@ -5,4 +5,12 @@
 video-feed {
     display: block;
     padding: rem-calc(50);
+
+    .sby_play_btn {
+        svg {
+            path {
+                color: #FF0000;
+            }
+        }
+    }
 }
