--- a/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-styles.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-styles.scss
@@ -86,6 +86,16 @@
         }
 
         button {
+
+            &[type=submit] {
+                color: var(--brand-neon-green);
+
+                &:hover,
+                &:focus {
+                    color: var(--off-black);
+                }
+            }
+
             &.wpfFilterButton {
                 display: inline-block;
                 padding: 10px 50px;
