Search button styled fix

--- a/wp-content/themes/decimaltenths/src/scss/components/_search-by-car-form.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_search-by-car-form.scss
@@ -22,11 +22,13 @@
     }
 
     [type="submit"] {
-        @extend %btn;
+        //@extend %btn;
+        background-color: transparent;
         color: var(--brand-neon-green);
 
         &:hover,
         &:focus {
+            background-color: var(--brand-neon-green);
             color: var(--off-black);
         }
     }
