--- a/wp-content/themes/decimaltenths/src/scss/modules/_woo-cart.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_woo-cart.scss
@@ -52,7 +52,8 @@ table:not(.variations) {
 .woocommerce-cart-form__cart-item {
 
 	@include breakpoint(medium down) {
-
+		.product-remove,
+		.product-thumbnail,
 		.product-name,
 		.product-price,
 		.product-quantity,
