--- a/wp-content/themes/decimaltenths/src/scss/modules/_woo-cart.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_woo-cart.scss
@@ -29,7 +29,7 @@
 			bottom: 0;
 			width: 80%;
 			height: 4px;
-			background-color: green;
+			background-color: var(--brand-neon-green);
 		}
 	}
 }
@@ -113,13 +113,12 @@ table:not(.variations) {
 			}
 
 			[name="apply_coupon"] {
-				color: var(--off-white);
-				background-color: green;
-				border: 1px solid darkgreen;
+				color: var(--off-black);
+				background-color: var(--brand-neon-green);
 
 				&:hover,
 				&:focus {
-					background-color: darken(green, 5%);
+					background-color: white;
 				}
 			}
 		}
@@ -159,7 +158,7 @@ table:not(.variations) {
 		font-family: $heading-font;
 		letter-spacing: 0.05em;
 		text-transform: uppercase;
-		background-color: transparent;
+		background-color: var(--brand-neon-green);
 		border: 2px solid var(--brand-neon-green);
 		border-radius: 50px;
 		cursor: pointer;
@@ -168,7 +167,7 @@ table:not(.variations) {
 		&:hover,
 		&:focus {
 			color: var(--off-black);
-			background: var(--brand-neon-green);
+			background-color: transparent
 		}
 	}
 }
@@ -191,7 +190,7 @@ table:not(.variations) {
 			bottom: 0;
 			width: 80%;
 			height: 4px;
-			background-color: green;
+			background-color: var(--brand-neon-green);
 		}
 	}
 }
