Checkout amendments for styling errors

--- a/wp-content/themes/decimaltenths/src/scss/modules/_woo-checkout.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_woo-checkout.scss
@@ -82,6 +82,18 @@
 		}
 	}
 
+	.woocommerce-NoticeGroup {
+		padding: 0;
+		flex: 0 0 100%;
+    	max-width: 100%;
+
+		ul {
+			li {
+				margin-left: $medium-spacing;
+			}
+		}
+	}
+
 	> * {
 		@include column();
 		// small-12
