--- a/wp-content/themes/decimaltenths/src/scss/modules/_woo-cart.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_woo-cart.scss
@@ -154,7 +154,6 @@ table:not(.variations) {
 	.checkout-button {
 		display: inline-block;
 		padding: 10px 50px;
-		height: 50px;
 		font-family: $heading-font;
 		letter-spacing: 0.05em;
 		text-transform: uppercase;
@@ -163,6 +162,7 @@ table:not(.variations) {
 		border-radius: 50px;
 		cursor: pointer;
 		color: var(--off-black);
+		text-align: center;
 
 		&:hover,
 		&:focus {
