--- a/wp-content/themes/decimaltenths/src/scss/modules/_woo-checkout.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_woo-checkout.scss
@@ -119,7 +119,7 @@
 			bottom: 0;
 			width: 80%;
 			height: 4px;
-			background-color: green;
+			background-color: var(--brand-neon-green);
 		}
 	}
 
